<resources>
    <string name="app_name">Reissuvahti</string>
    <string name="aloita_uusi_reissu">Aloita uusi reissu</string>
    <string name="historia_ja_asetukset">Historia ja asetukset</string>
    <string name="startpoint">startPoint</string>
    <string name="todo">TODO</string>
    <string name="button">Button</string>
    <string name="lis_pys_hdys">Lisää pysähdys</string>
    <string name="valmis">Valmis</string>
    <string name="textview">TextView</string>
    <string name="currentUserTxt">Nykyinen käyttäjä:</string>
    <string name="setHomeText">Aseta kotisijainti</string>
    <string name="currentHomeText">Nykyinen koti:</string>
</resources>
