<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TripBaseLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TripActivity">

    <ImageButton
        android:id="@+id/tripEndIcon"
        android:layout_width="100dp"
        android:layout_height="120dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:clickable="false"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/arrow_down_float" />

    <ImageButton
        android:id="@+id/tripStartIcon"
        android:layout_width="100dp"
        android:layout_height="120dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="20dp"
        android:clickable="false"
        android:contentDescription="@string/startpoint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/arrow_up_float" />

    <LinearLayout
        android:id="@+id/tripOverviewBar"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@+id/tripEndIcon"
        app:layout_constraintStart_toEndOf="@+id/tripStartIcon"
        app:layout_constraintTop_toTopOf="parent">

    </LinearLayout>

    <Button
        android:id="@+id/finishTrip"
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="20dp"
        android:onClick="finishTrip"
        android:text="@string/valmis"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/finishTrip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tripOverviewBar">

        <LinearLayout
            android:id="@+id/tripDestinationGrid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:scrollbars="horizontal|vertical"
            android:verticalScrollbarPosition="right">

            <Button
                android:id="@+id/addStop"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:text="@string/lis_pys_hdys" />

            <TextView
                android:id="@+id/currentStopLatitude"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginTop="10dp" />

            <TextView
                android:id="@+id/currentStopLongitude"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginTop="10dp" />

            <TextView
                android:id="@+id/currentNearbyLocations"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginTop="10dp" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>